--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "antd": "^5.21.6",
+    "firebase": "^11.0.1",
     "formik": "^2.4.6",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0",
     "zxcvbn": "^4.4.2"
   },
